# bmesh-encoding

./: .env  .gitignore  README.md  __init__.py  blender_manifest.toml  decoding.py  diagnose_triangulation.py  encoding.py  exporter.py  gltf_extension.py  importer.py  inspect_gltf_extension_system.py  logger.py  pyproject.toml  setup_dev.py  test_addon_load.py  test_blender_integration.py  test_complete_roundtrip.py  test_direct_extension_test.py  test_export_fix.py  test_extension_discovery.py  test_extension_hooks.py  test_gltf_export_simulation.py  test_gltf_extension_discovery.py  test_gltf_extension_validation.py  test_gltf_validation_simple.py  test_import_hook_fix.py  test_import_pipeline.py  test_quad_roundtrip.py  test_sample.gltf  test_simple_gltf_export.py  test_topology_validation.py  ui.py
EXT_bmesh_encoding/: README.md
EXT_bmesh_encoding/schema/: bmesh_schema_example.json  glTF.EXT_structural_metadata.bmesh.schema.json
tests/: __init__.py  base_blender_test_case.py  mock_vrm.py  test_bmesh_encoding_edge_cases.py  test_bmesh_encoding_roundtrip.py  test_bmesh_encoding_vrm0.py  test_bmesh_encoding_vrm1.py  test_encoding.py  test_end_to_end_import_export.py
