[project]
name = "ext_bmesh_encoding"
requires-python = "==3.11.*"
version = "1.0.0"
authors = [
    {name = "VRM Consortium"},
]
license = {text = "SPDX-License-Identifier: MIT OR GPL-3.0-or-later"}

dependencies = [
    "bpy == 4.5.*",
]

[tool.uv]
dev-dependencies = [
    "codespell ==2.4.1",
    "mypy ==1.15.0",
    "pytest",
    "ruff ==0.9.6",
    "starry-bpy-typings",
]

[tool.uv.sources]
starry-bpy-typings = {path = "../VRM-Addon-for-Blender/typings"}

[tool.ruff]
target-version = "py39"
src = ["."]

[tool.ruff.lint]
allowed-confusables = [
    "\u30ce",
]
select = ["ALL"]
ignore = [
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "ERA001",
    "EXE002",
    "FA100",
    "FIX002",
    "ISC001",
    "ISC003",
    "PERF203",
    "PLR2004",
    "PT",
    "RET504",
    "SIM118",
    "TC001",
    "TC002",
    "TC003",
    "TD002",
    "TD003",
    "TID252",
]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "EXPORT_SCENE_OT_*",
    "EXT_OT_*",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.mccabe]
max-complexity = 150

[tool.ruff.lint.pylint]
max-args = 19
max-branches = 120
max-returns = 25
max-statements = 550

[tool.codespell]
ignore-regex = ".* # codespell-ignore"

[tool.mypy]
python_version = "3.9"
mypy_path = "$MYPY_CONFIG_FILE_DIR/../../typings:$MYPY_CONFIG_FILE_DIR"
strict = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "strict"

reportMissingModuleSource = false
reportCallInDefaultInitializer = true
reportShadowedImports = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
